--- a/3/daohanglan.html
+++ b/3/daohanglan.html
@@ -29,9 +29,9 @@
                 <h2>01</h2>
                 <h3>YTKJ ISO</h3>
                 <p>
-                    梦想，如同夜空中闪烁的星辰，引领着我们在生活的航程中前行.
+                    Python可视化
                 </p>
-                <a href="#">GO</a>
+                <a href="../3/python可视化5-7.txt">GO</a>
             </div>
         </div>
         <div class="card">
